Reformat inaugural letter to match style

--- a/site/markdown/2026-01-30.md
+++ b/site/markdown/2026-01-30.md
@@ -11,17 +11,11 @@ It is with great displeasure that we announce the official launch of **Hindsight
 
 For too long, financial news has been dominated by "experts" who use "math" and "fundamental analysis." We find this approach cowardly. Real investing isn't about reading balance sheets; it's about reading the room, specifically a room full of degenerate gamblers screaming about tickers they saw on a TikTok.
 
-### Our Mission
-To aggregate the collective psychosis of r/wallstreetbets into a single, digestible daily report. We will track the sentiment, the hype, and the inevitable loss porn so you can make informed decisions—or, more likely, do exactly what the herd does but slightly slower.
+**OUR MISSION:** To aggregate the collective psychosis of r/wallstreetbets into a single, digestible daily report. We will track the sentiment, the hype, and the inevitable loss porn so you can make informed decisions—or, more likely, do exactly what the herd does but slightly slower.
 
-### What to Expect
-Every day, our proprietary AI (Artificial Incompetence) algorithm—which we assure you is *not* just a raccoon hot-wiring a ChatGPT wrapper—will scour the subreddit for:
-*   **The Next Meme Stock:** So you can buy the top.
-*   **The "DD" (Due Diligence):** 4,000 words explaining why a bankrupt company is actually Amazon 2.0.
-*   **The Loss Porn:** To remind you that it could always be worse.
+**WHAT TO EXPECT:** Every day, our proprietary AI (Artificial Incompetence) algorithm—which we assure you is *not* just a raccoon hot-wiring a ChatGPT wrapper—will scour the subreddit for **The Next Meme Stock** (so you can buy the top), **The "DD"** (4,000 words explaining why a bankrupt company is actually Amazon 2.0), and **The Loss Porn** (to remind you that it could always be worse).
 
-### A Note on Risk
-We do not hedge. We do not diversify. We leverage. If you are looking for safe returns, go buy a bond. If you are looking to turn your life savings into a tax write-off in T-minus 48 hours, you have found your home.
+**A NOTE ON RISK:** We do not hedge. We do not diversify. We leverage. If you are looking for safe returns, go buy a bond. If you are looking to turn your life savings into a tax write-off in T-minus 48 hours, you have found your home.
 
 Welcome to the casino. The market opens at 9:30 AM. Don’t be late.
 
