--- a/site/markdown/2026-01-31.md
+++ b/site/markdown/2026-01-31.md
@@ -1,27 +1,29 @@
 **HINDSIGHT CAPITAL MANAGEMENT**
-*“Where Yesterday’s Mistakes Are Tomorrow’s Portfolio”*
+*“Where our 20/20 vision only applies to yesterday’s candles.”*
 
 **To:** Hindsight Global Investors
 **Date:** January 31, 2026
-**Subject:** The 240p Path to the Wendy's Dumpster
+**Subject:** The "My Portfolio Got Warshed" Edition
 
-Greetings, Fellow Exit Liquidity,
+Greetings, fellow Bagholders and Future Wendy’s Associates,
 
-Brace yourselves, because the apes are hooting for a [sexy week](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2p0h4k/) ahead. Despite the fact that our primary analytical tools—the weekly earnings graphics—now look like they were rendered on a [potato in 280P resolution](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2qd0ee/), the sentiment is clear: it’s either a moon mission or we’re updating our resumes for the fry station. While some bears are convinced it’s officially [puts season](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mtbca/), the rest of the herd is busy [full-porting](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2svqu8/) into calls with the reckless abandon of a man who just found his wife’s boyfriend’s credit card.
+If you’re reading this, congratulations on surviving the largest single-day puke in precious metals history. The market mood has officially shifted from "to the moon" to "please [save me](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2omjca/)." Between the new Fed nominee Kevin Warsh sending the dollar on a revenge tour and the AI bubble showing structural cracks, our "buy high, sell low" strategy is performing exactly as expected. While the SPY is only down a fraction, our portfolio of [retard stocks](https://www.reddit.com/r/wallstreetbets/comments/1qrhst1/weekend_discussion_thread_for_the_weekend_of/o2obvic/) is in absolute shambles. Grab a crayon and let’s dive into the wreckage.
 
-**RDDT:** This is the undisputed heavyweight of the week. Our "experts" are betting on a [return to $200](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2ocpoc/) driven by user growth. Despite many getting their [asses burned](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2qtoqc/) by this ticker recently, the consensus is to [go in deep](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2qtoqc/) for the ER. One particularly dedicated philanthropist has even been buying [subscriptions all year](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2r42m1/) to pump the bottom line—truly the peak of "regarded" financial engineering.
+**SLV / GLD:** The "safe havens" decided to act like [pump dot fun tokens](https://www.reddit.com/r/wallstreetbets/comments/1qre0t9/breaking_silver_crashes_38_from_record_high_gold/o2ngh2b/) this week. Silver suffered a historic 38% crash, proving that the only thing "precious" about these metals is the [loss porn](https://www.reddit.com/r/wallstreetbets/comments/1qrjkqp/a_beautiful_80k_loss/o2onxxw/) they generated. While some geniuses hit [50-bagger puts](https://www.reddit.com/r/wallstreetbets/comments/1qre0t9/breaking_silver_crashes_38_from_record_high_gold/o2nifsp/), most of you were busy [buying the top](https://www.reddit.com/r/wallstreetbets/comments/1qre0t9/breaking_silver_crashes_38_from_record_high_gold/o2njs9b/) because a coworker mentioned it. Now that the CME [jacked margins](https://www.reddit.com/r/wallstreetbets/comments/1qs5xbo/cme_hikes_gold_margins_from_6_to_8_and_silver/o2t434p/), we’re officially long-term investors (bagholders).
 
-**PLTR:** The logic here is a masterclass in reverse psychology. Since the stock is down 25% in three months and the [sentiment is absolute shit](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mvpcu/), the only logical conclusion for a degenerate is that it [must moon](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mvpcu/). We are currently allocating 40% of the fund to this "trust me bro" thesis.
+**RDDT:** Investors are preparing to bet the farm on our favorite digital dumpster fire. With earnings around the corner, the consensus is to [fucking send it](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mp0c5/) on calls. Some bulls think it’s heading back to [$200 next week](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2ocpoc/), while others are just [full porting](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2svqu8/) and praying the user growth doesn't disappoint. If this fails, at least we can all complain about it in the same thread we lost our money in.
 
-**GOOGL:** The strategy is simple: [All in](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2moklq/). We are eyeing the [330C lottery tickets](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mp0c5/) because apparently, fundamental analysis is for people who enjoy staying poor. If Sundar doesn't deliver, I'll see you all at the dumpster for the Tuesday night shift.
+**ORCL:** Oracle is currently in a "financing crisis," reportedly planning to [fire 30,000 people](https://www.reddit.com/r/wallstreetbets/comments/1qrpe22/oracle_may_cut_30k_jobs_and_sell_cerner_to_fund/o2pxwcd/) and sell off Cerner just to pay for their OpenAI addiction. The hive mind is split: half think the stock will [rally on lower costs](https://www.reddit.com/r/wallstreetbets/comments/1qrpe22/oracle_may_cut_30k_jobs_and_sell_cerner_to_fund/o2pybc8/), while the smarter half realizes the [dominoes are starting to wobble](https://www.reddit.com/r/wallstreetbets/comments/1qrpe22/oracle_may_cut_30k_jobs_and_sell_cerner_to_fund/o2q0444/).
 
-**SMCI:** We have a classic case of cognitive dissonance. While some are clutching [4-call positions](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mplbq/) like a life raft, others are correctly identifying it as [literally the worst company](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2o210c/). We’ve decided to follow both sets of advice simultaneously to ensure maximum loss porn.
+**SPACEX:** Elon’s space company is reportedly printing [$8 billion in profit](https://www.reddit.com/r/wallstreetbets/comments/1qsbfok/spacex_posts_8b_profit_on_1516b_revenue_in_2025/o2u8td8/), leading to a staggering $1.5 trillion valuation rumor. While the fanboys are ready to [risk a limb](https://www.reddit.com/r/wallstreetbets/comments/1qsbfok/spacex_posts_8b_profit_on_1516b_revenue_in_2025/o2u8mmq/) on the IPO, the bears are screaming about [cooked books](https://www.reddit.com/r/wallstreetbets/comments/1qsbfok/spacex_posts_8b_profit_on_1516b_revenue_in_2025/o2ub0vo/) and SpaceX paying themselves for Starlink launches. Either way, it’s a value play compared to Tesla’s PE, which is basically a phone number.
 
-**AMD:** The directive from the front lines is to [fucking send it](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mp0c5/) with [250C](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mp0c5/) strikes. We aren’t sure where it’s being sent, but based on our track record, it’s likely straight to a Chapter 11 filing.
+**PYPL:** PayPal is currently the [most hated stock](https://www.reddit.com/r/wallstreetbets/comments/1qs38rj/paypal_earnings_play_pypl/o2skat9/) on the market despite a forward PE of 9. One absolute unit [sold 500 puts](https://www.reddit.com/r/wallstreetbets/comments/1qs38rj/paypal_earnings_play_pypl/o2sh5il/), essentially betting $2.6 million that the bottom is in. Most of us are just watching from the sidelines, waiting for the inevitable "GUH" or the rally that finally justifies four years of [flat trading](https://www.reddit.com/r/wallstreetbets/comments/1qs38rj/paypal_earnings_play_pypl/o2si9fs/).
 
-If these earnings don't [save our portfolios](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2omjca/), I’ve already pre-ordered the HCM-branded cardboard boxes for our new office under the overpass. Remember: [earnings don't mean shit](https://www.reddit.com/r/wallstreetbets/comments/1qr9ztv/weekly_earnings_thread_22_26/o2mx4j0/) anymore, so just close your eyes, hit the "buy" button, and pray the Reddit servers don't crash before you can post your losses.
+**ASTS:** While the rest of the market burned, one legend managed to [30x a Hail Mary](https://www.reddit.com/r/wallstreetbets/comments/1qrqgd4/30x_with_asts_hail_mary/o2q3se9/) on puts. It’s a classic case of [extreme luck](https://www.reddit.com/r/wallstreetbets/comments/1qrqgd4/30x_with_asts_hail_mary/o2q8uv2/) meeting a total market meltdown. It reminds us all that if you gamble long enough, eventually you’ll accidentally be right.
 
-May your hands be diamond and your brain be smooth,
+In conclusion, if your portfolio is currently hemorrhaging, just remember: you haven't lost anything until you sell, but you also won't have a roof over your head if you don't. Maybe try [blowing on the cartridge](https://www.reddit.com/r/wallstreetbets/comments/1qrjkqp/a_beautiful_80k_loss/o2oqdad/) or asking your broker for a [refund](https://www.reddit.com/r/wallstreetbets/comments/1qrnpms/how_do_i_get_a_refund/o2pj4oa/). If all else fails, I hear [ornamental gourds](https://www.reddit.com/r/wallstreetbets/comments/1qrd08w/redhot_silver_is_almost_guaranteed_to_plunge_50/o2nc1th/) are a prudent pivot.
+
+Warmly (from the warmth of a burning trash can),
 
 **Hindsight Henry**
 *Chief Investment Officer, Hindsight Capital Management*
